--- a/FAQ-French.html
+++ b/FAQ-French.html
@@ -83,7 +83,7 @@
       <h2>Questions fréquemment posées</h2></center> </p>
       
       <a href="https://dmv.dc.gov/" target="_blank"> <p align="center"><img alt="" src="images/logos.png"></p></a>
-      <p align="center" style="font-size:12pt"> <a href="https://drivesafefaqs/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs/FAQ-Mandarin.html" target="_blank">中文<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs/FAQ-Vietnamese.html" target="_blank">Tiếng Việt<a></p>  
+      <p align="center" style="font-size:12pt"> <a href="https://github.com/drivesafefaqs/drivesafe/blob/main/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/drivesafefaqs/drivesafe/blob/main/FAQ-Mandarin.html" target="_blank">中文<a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/drivesafefaqs/drivesafe/blob/main/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/drivesafefaqs/drivesafe/blob/main/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/drivesafefaqs/drivesafe/blob/main/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://github.com/drivesafefaqs/drivesafe/blob/main/-Vietnamese.html" target="_blank">Tiếng Việt<a></p>   
       
               <p align="center" style="font-size:12pt">  <a href="https://drivesafefaqs/letter_translations/Drivesafe_genericmailer_FR.pdf" target="_blank">Mailer Copy<a></p>
   
