--- a/FAQ-Spanish.html
+++ b/FAQ-Spanish.html
@@ -104,7 +104,7 @@
 de DC durante el horario de atención. Los horarios de atención al público pueden consultarse en "About DMV" en 
 <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>.</li></ul> 
     <br>
-      <summary><strong>I have additional questions. Who can I reach out to?</strong></summary>
+      <summary><strong>Tengo más preguntas. ¿Con quién puedo comunicarme?</strong></summary>
        <ul style="list-style: none;"><li>Ingrese en nuestra sección de preguntas frecuentes en drivesafe.dc.gov para obtener más información o póngase en contacto con nosotros en <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>. Si tiene preguntas sobre sus citaciones ingrese en "Ticket Services" en <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>. </li></ul> 
     <br>
   </body>
