logo for letter

--- a/FAQ-Mandarin.html
+++ b/FAQ-Mandarin.html
@@ -23,7 +23,7 @@
       h1 {
         padding-top: 30pt;
         color: #000000;
-        font-size: 30pt;
+        font-size: 35pt;
         padding-bottom: 6pt;
         font-family: "Arial";
         line-height: 1.15;
@@ -36,7 +36,7 @@
       h2 {
         padding-top: 6pt;
         color: #000000;
-        font-size: 24pt;
+        font-size: 20pt;
         padding-bottom: 6pt;
         font-family: "Arial";
         line-height: 1.15;
@@ -80,11 +80,13 @@
   <body>
       
       <h1>Drive Safe DC</h1>
+      <a href="https://dmv.dc.gov/" target="_blank"> <p align="center"><img alt="" src="images/logos.png"></p></a>
+      <br>
+      <a href="letter_translations/Drivesafe_genericmailer_SC.pdf" target="_blank"> <p align="center"><img alt="" src="images/letter.png"></p></a>
+      <p align="center" style="font-size:12pt">  <a href="letter_translations/Drivesafe_genericmailer_SC.pdf" target="_blank">View the letter here<a></p>
       <h2>常见问题 </h2></center> </p>
       
-      <a href="https://dmv.dc.gov/" target="_blank"> <p align="center"><img alt="" src="images/logos.png"></p></a>
       <p align="center" style="font-size:12pt"> <a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/index.html" target="_blank">English<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Vietnamese.html" target="_blank">Tiếng Việt<a></p>      
-              <p align="center" style="font-size:12pt">  <a href="letter_translations/Drivesafe_genericmailer_SC.pdf" target="_blank">Mailer Copy<a></p>
   
         <br>
         <summary><strong>我为何收到此信函？</strong></summary>
