--- a/FAQ-Mandarin.html
+++ b/FAQ-Mandarin.html
@@ -102,10 +102,10 @@
           <ul style="list-style: none;"><li>许多驾车人与朋友和家人共用其车辆。但您的车辆仍比其他车辆更有可能发生碰撞。请考虑与驾驶您车辆的朋友和家人分享这一信息。</li></ul>
         <br>
             <summary><strong>如何查询我的罚单是否已支付，或支付未缴罚单？</strong></summary>
-               <ul style="list-style: none;"><li>如需检查您车辆的罚单或罚款通知书状态，请访问 dmv.dc.gov 的“罚单服务 (Ticket Services)”或在工作时间到访任一哥伦比亚特区机动车辆管理局 (DC DMV) 服务中心。您可经  at <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>下“关于 DMV (About DMV)”查看工作时间。</li></ul>
+               <ul style="list-style: none;"><li>如需检查您车辆的罚单或罚款通知书状态，请访问 <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a> 的“罚单服务 (Ticket Services)”或在工作时间到访任一哥伦比亚特区机动车辆管理局 (DC DMV) 服务中心。您可经  at <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>下“关于 DMV (About DMV)”查看工作时间。</li></ul>
         <br>
             <summary><strong>我还有其他问题。我可以与谁联系？</strong></summary>
-               <ul style="list-style: none;"><li>请经 drivesafe.dc.gov 访问我们的常见问题，了解更多信息，或发送电子邮件至<a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a> 与我们联系。有关您罚款通知书的问题，请访问  <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>下的“罚单服务”。</li></ul> 
+               <ul style="list-style: none;"><li>请经 <a href="https://drivesafefaqs.github.io/drivesafe/" target="_blank">drivesafe.dc.gov</a> 访问我们的常见问题，了解更多信息，或发送电子邮件至<a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a> 与我们联系。有关您罚款通知书的问题，请访问  <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>下的“罚单服务”。</li></ul> 
         <br>
   </body>
 </html>
