--- a/FAQ-Spanish.html
+++ b/FAQ-Spanish.html
@@ -104,12 +104,10 @@
       <ul style="list-style: none;"><li>Muchos conductores comparten su vehículo con amigos y familiares. Sin embargo, su automóvil tiene más probabilidad de estar en un accidente que otros. Considere la posibilidad de compartir este mensaje con los amigos y familiares que utilizan su automóvil.</li></ul>
     <br>
       <summary><strong>¿Cómo puedo comprobar si mis multas están pagadas o pagar multas pendientes?</strong></summary>
-       <ul style="list-style: none;"><li>Para comprobar el estado de las multas o citaciones de su vehículo, ingrese en "Ticket Services" en dmv.dc.gov o diríjase a cualquier centro de servicio del Departamento de Vehículos Motorizados (DMV) 
-de DC durante el horario de atención. Los horarios de atención al público pueden consultarse en "About DMV" en 
-<a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>.</li></ul> 
+       <ul style="list-style: none;"><li>Para comprobar el estado de las multas o citaciones de su vehículo, ingrese en "Ticket Services" en <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a> o diríjase a cualquier centro de servicio del Departamento de Vehículos Motorizados (DMV) de DC durante el horario de atención. Los horarios de atención al público pueden consultarse en "About DMV" en <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>.</li></ul> 
     <br>
       <summary><strong>Tengo más preguntas. ¿Con quién puedo comunicarme?</strong></summary>
-       <ul style="list-style: none;"><li>Ingrese en nuestra sección de preguntas frecuentes en drivesafe.dc.gov para obtener más información o póngase en contacto con nosotros en <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>. Si tiene preguntas sobre sus citaciones ingrese en "Ticket Services" en <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>. </li></ul> 
+       <ul style="list-style: none;"><li>Ingrese en nuestra sección de preguntas frecuentes en <a href="https://drivesafefaqs.github.io/drivesafe/" target="_blank">drivesafe.dc.gov</a> para obtener más información o póngase en contacto con nosotros en <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>. Si tiene preguntas sobre sus citaciones ingrese en "Ticket Services" en <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>. </li></ul> 
     <br>
   </body>
 </html>
