--- a/FAQ-Vietnamese.html
+++ b/FAQ-Vietnamese.html
@@ -102,13 +102,14 @@
       <ul style="list-style: none;"><li>Rất nhiều tài xế dùng chung phương tiện của họ với bạn bè và gia đình. Tuy nhiên, xe của quý vị vẫn có khả năng bị va chạm nhiều hơn các xe khác. Hãy chia sẻ tin nhắn này với bạn bè và gia đình, những người sử dụng xe của quý vị.</li></ul>
     <br>
             <summary><strong>Làm thế nào để tôi kiểm tra xem vé phạt của tôi đã được thanh toán hay chưa, hoặc để thanh toán vé phạt chưa được nộp phạt?</strong></summary>
-           <ul style="list-style: none;"><li>Để kiểm tra tình trạng vé phạt hoặc giấy phạt cho phương tiện của quý vị, hãy truy cập “Ticket Services” (Dịch Vụ Vé Phạt) tại dmv.dc.gov hoặc bất cứ trung tâm dịch vụ DMV DC nào trong giờ hành chính. Có thể xem giờ hành chính ở “About DMV” tại <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>.</li></ul> 
+           <ul style="list-style: none;"><li>Để kiểm tra tình trạng vé phạt hoặc giấy phạt cho phương tiện của quý vị, hãy truy cập “Ticket Services” (Dịch Vụ Vé Phạt) tại <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a> hoặc bất cứ trung tâm dịch vụ DMV DC nào trong giờ hành chính. Có thể xem giờ hành chính ở “About DMV” tại <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>.</li></ul> 
 
     <br>
 
             <summary><strong>Tôi có thêm thắc mắc. Tôi có thể liên hệ với ai?</strong></summary>
-           <ul style="list-style: none;"><li>Truy cập mục các Câu Hỏi Thường Gặp của chúng tôi tại drivesafe.dc.gov để biết thêm thông tin hoặc liên hệ với chúng tôi tại <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>. Để giải đáp các thắc mắc về vé phạt của quý vị, truy cập “Ticket Services” tại <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>. </li></ul> 
+           <ul style="list-style: none;"><li>Truy cập mục các Câu Hỏi Thường Gặp của chúng tôi tại <a href="https://drivesafefaqs.github.io/drivesafe/" target="_blank">drivesafe.dc.gov</a> để biết thêm thông tin hoặc liên hệ với chúng tôi tại <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>. Để giải đáp các thắc mắc về vé phạt của quý vị, truy cập “Ticket Services” tại <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>. </li></ul> 
 
     <br>
   </body>
 </html>
+https://drivesafefaqs.github.io/drivesafe/
