--- a/FAQ-Amharic.html
+++ b/FAQ-Amharic.html
@@ -103,10 +103,10 @@
           <ul style="list-style: none;"><li>ብዙ አሽከርካሪዎች ተሽከርካሪያቸውን ለጓደኞች እና ቤተሰብ ያውሳሉ። ይሁን እንጂ፣ መኪናዎ አሁንም ከሌሎች የበለጠ የመጋጨት እድሉ ከፍተኛ ነው። ይህንን መልዕክት መኪናዎን ለሚጠቀሙ ጓደኞች እና ቤተሰብ ማጋራትዎን አይዘንጉ። </li></ul>
         <br>
         <summary><strong>ትኬቶቼ መከፈላቸውን እንዴት አረጋግጣለሁ፣ ወይም ያልተከፈሉ ትኬቶችን እንዴት እከፍላለሁ?</strong></summary>
-          <ul style="list-style: none;"><li>የተሽከርካሪዎን ትኬቶች ወይም ዋቢዎች ሁኔታ ለማረጋገጥ  እባክዎ በ dmv.dc.gov ላይ “የትኬት አገልግሎቶችን” ወይም በማንኛውም የDC DMV አገልግሎት ማዕከላት በስራ ሰአታት ይጎብኙ። የስራ ሰዐታትን በ <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>ድረ ገጽ “ስለ DMV” የሚለው ላይ ማግኘት ይቻላል።</li></ul> 
+          <ul style="list-style: none;"><li>የተሽከርካሪዎን ትኬቶች ወይም ዋቢዎች ሁኔታ ለማረጋገጥ  እባክዎ በ dmv.<a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>“የትኬት አገልግሎቶችን” ወይም በማንኛውም የDC DMV አገልግሎት ማዕከላት በስራ ሰአታት ይጎብኙ። የስራ ሰዐታትን በ <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>ድረ ገጽ “ስለ DMV” የሚለው ላይ ማግኘት ይቻላል።</li></ul> 
         <br>
         <summary><strong>ተጨማሪ ጥያቄዎች አሉኝ። ማንን ማግኘት እችላለሁ?</strong></summary>
-         <ul style="list-style: none;"><li>ለተጨማሪ መረጃ በተደጋጋሚ የሚጠየቁ ጥያቀዎችን የተመለከተ መረጃ በdrivesafe.dc.gov ድረ ገጽን ይጎብኙ ወይም በvision.z<a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>ሩን። ዋቢዎችዎን በተመለከተ ጥያቄዎች ለመጠየቅ በ <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>“የትኬት አገልግሎቶች” የሚለውን ይጎብኙ።</li></ul> 
+         <ul style="list-style: none;"><li>ለተጨማሪ መረጃ በተደጋጋሚ የሚጠየቁ ጥያቀዎችን የተመለከተ መረጃ በ <a href="https://drivesafefaqs.github.io/drivesafe/" target="_blank">drivesafe.dc.gov</a> ድረ ገጽን ይጎብኙ ወይም በvision.z<a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>ሩን። ዋቢዎችዎን በተመለከተ ጥያቄዎች ለመጠየቅ በ <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>“የትኬት አገልግሎቶች” የሚለውን ይጎብኙ።</li></ul> 
         <br>
   </body>
 </html>
