--- a/FAQ-French.html
+++ b/FAQ-French.html
@@ -103,10 +103,10 @@
           <ul style="list-style: none;"><li>De nombreux conducteurs partagent leur véhicule avec des amis ou des membres de leur famille. Cependant, votre voiture est toujours plus susceptible d'être impliquée dans un accident que les autres. Pensez à transmettre ce message aux amis et aux membres de votre famille qui utilisent votre voiture.</li></ul>
         <br>
         <summary><strong>Comment puis-je vérifier si mes contraventions sont payées ou comment puis-je régler des contraventions impayées ?</strong></summary>
-         <ul style="list-style: none;"><li>Pour vérifier le statut des contraventions de votre véhicule, veuillez consulter la rubrique « Ticket Services » sur le site dmv.dc.gov ou vous rendre dans un centre de service DC DMV pendant les heures d’ouverture. Les heures d’ouverture peuvent être consultées sur le site <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>, sous la rubrique « About DMV » .</li></ul> 
+         <ul style="list-style: none;"><li>Pour vérifier le statut des contraventions de votre véhicule, veuillez consulter la rubrique « Ticket Services » sur le site <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a> ou vous rendre dans un centre de service DC DMV pendant les heures d’ouverture. Les heures d’ouverture peuvent être consultées sur le site <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>, sous la rubrique « About DMV » .</li></ul> 
         <br>
         <summary><strong>J’ai d’autres questions. À qui puis-je m’adresser ?</strong></summary>
-         <ul style="list-style: none;"><li>Consultez nos FAQ sur drivesafe.dc.gov pour plus d’informations ou contactez-nous à l’adresse <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>. Pour les questions concernant vos contraventions, consultez la rubrique « Ticket Services » sur le site  <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>. </li></ul>
+         <ul style="list-style: none;"><li>Consultez nos FAQ sur <a href="https://drivesafefaqs.github.io/drivesafe/" target="_blank">drivesafe.dc.gov</a> pour plus d’informations ou contactez-nous à l’adresse <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>. Pour les questions concernant vos contraventions, consultez la rubrique « Ticket Services » sur le site  <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>. </li></ul>
         <br>
   </body>
 </html>
