--- a/FAQ-Korean.html
+++ b/FAQ-Korean.html
@@ -106,10 +106,10 @@
           <ul style="list-style: none;"><li>많은 운전자들이 친구나 가족과 차량을 공유합니다. 그러나 귀하의 차량은 여전히 다른 차량보다 충돌 사고가 날 확률이 높습니다. 귀하의 차량을 함께 사용하는 친구나 가족에게 이 메시지를공유하여 주십시오.</li></ul>
         <br>
         <summary><strong>교통 위반 티켓이 납부되었는지 확인하거나, 미납 티켓을 납부하려면 어떻게 해야 하나요?</strong></summary>
-           <ul style="list-style: none;"><li>귀하의 차량의 위반 티켓이나 과태료 상태를 확인하시려면, 웹사이트 <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>의 “Ticket Services(티켓 서비스)” 또는 운영 시간 중 DC DMV 서비스 센터를 방문하십시오. 운영 시간은 dmv.dc.gov에서 “About DMV(DMV 소개)”를 확인하십시오.</li></ul> 
+           <ul style="list-style: none;"><li>귀하의 차량의 위반 티켓이나 과태료 상태를 확인하시려면, 웹사이트 <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>의 “Ticket Services(티켓 서비스)” 또는 운영 시간 중 DC DMV 서비스 센터를 방문하십시오. 운영 시간은 <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>에서 “About DMV(DMV 소개)”를 확인하십시오.</li></ul> 
         <br>
         <summary><strong>추가 질문이 있습니다. 누구에게 문의할 수 있나요?</strong></summary>
-           <ul style="list-style: none;"><li>자세한 내용은 웹사이트 drivesafe.dc.gov의 자주 묻는 질문(FAQ)을 확인하시거나, 이메일 <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>로 연락하십시오. 교통 위반 티켓에 관한 질문은 <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>의 “Ticket Services(티켓 서비스)”를 확인하십시오. </li></ul> 
+           <ul style="list-style: none;"><li>자세한 내용은 웹사이트 <a href="https://drivesafefaqs.github.io/drivesafe/" target="_blank">drivesafe.dc.gov</a>의 자주 묻는 질문(FAQ)을 확인하시거나, 이메일 <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>로 연락하십시오. 교통 위반 티켓에 관한 질문은 <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>의 “Ticket Services(티켓 서비스)”를 확인하십시오. </li></ul> 
         <br>
   </body>
 </html>
