--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
           <ul style="list-style: none;"><li>Many drivers share their vehicle with friends and family. However, your car is still more likely to be in a crash than others are. Consider sharing this message with the friends and family who use your car.</li></ul>
         <br>
         <summary><strong>How do I check if my tickets are paid, or pay unpaid tickets?</strong></summary>
-         <ul style="list-style: none;"><li>To check the status of your vehicle’s tickets or citations, please visit “Ticket Services” at dmv.dc.gov or any DC DMV service center during operating hours. Hours of operation can be found at “About DMV” at <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>.</li></ul> 
+         <ul style="list-style: none;"><li>To check the status of your vehicle’s tickets or citations, please visit “Ticket Services” at <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a> or any DC DMV service center during operating hours. Hours of operation can be found at “About DMV” at <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>.</li></ul> 
         <br>
           <summary><strong>I have additional questions. Who can I reach out to?</strong></summary>
-           <ul style="list-style: none;"><li>Visit our FAQs at drivesafe.dc.gov for more info or contact us at <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>. For questions about your citations visit “Ticket Services” at <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>. </li></ul> 
+           <ul style="list-style: none;"><li>Visit our FAQs at <a href="https://drivesafefaqs.github.io/drivesafe/" target="_blank">drivesafe.dc.gov</a> for more info or contact us at <a href = "mailto: vision.zero@dc.gov"> vision.zero@dc.gov</a>. For questions about your citations visit “Ticket Services” at <a href="https://www.dmv.dc.gov" target="_blank"> dmv.dc.gov</a>. </li></ul> 
         <br>
   </body>
 </html>
