--- a/FAQ-Mandarin.html
+++ b/FAQ-Mandarin.html
@@ -82,12 +82,15 @@
       <h1>Drive Safe DC</h1>
       <a href="https://dmv.dc.gov/" target="_blank"> <p align="center"><img alt="" src="images/logos.png"></p></a>
       <br>
-      <a href="letter_translations/Drivesafe_genericmailer_SC.pdf" target="_blank"> <p align="center"><img alt="" src="images/letter.png"></p></a>
-      <p align="center" style="font-size:12pt">  <a href="letter_translations/Drivesafe_genericmailer_SC.pdf" target="_blank">View the letter here<a></p>
-      <h2>常见问题 </h2></center> </p>
-      
       <p align="center" style="font-size:12pt"> <a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/index.html" target="_blank">English<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Vietnamese.html" target="_blank">Tiếng Việt<a></p>      
-  
+ 
+         <p align="center"><object data=
+"letter_translations/Drivesafe_genericmailer_SC.pdf"
+                width="800" 
+                height="500"></object></p> 
+                
+      <h2>常见问题 </h2></center> </p>
+ 
         <br>
         <summary><strong>我为何收到此信函？</strong></summary>
                <ul style="list-style: none;"><li>哥伦比亚特区 (DC) 每年发生数千起交通事故以及几十起交通死亡事故。哥伦比亚特区零伤亡愿景 (Vizion Zero) 团队希望降低伤亡数，以保证在 哥伦比亚特区 生活和旅游人员的安全。自 2021 年以来，与大多数车辆相比，您的车辆收到较多自动交通罚款通知书，这可能使您发生车祸的风险增加。我们希望此封信函能鼓励您和其他可能驾驶您车辆的人员，为了您和其他人的安全，遵守限速、红灯时要停车。</li></ul>
