--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         widows: 2;
         text-align: left
       }
+        
+      iframe {
+        display: block;
+        border-style:none;
+      }
 
     </style>
   </head>
