--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <br>
       <p align="center" style="font-size:12pt"> <a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Mandarin.html" target="_blank">中文<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Vietnamese.html" target="_blank">Tiếng Việt<a></p>  
     
-    <iframe src="https://docs.google.com/viewer?url=https://drivesafedc.github.io/letter_translations/Drivesafe_genericmailer_EN.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
+    <p align="center"><iframe src="https://docs.google.com/viewer?url=https://drivesafedc.github.io/letter_translations/Drivesafe_genericmailer_EN.pdf&embedded=true" style="width:800px; height:600px;" frameborder="0"></iframe></p>
 
 <!--      <p align="center"><object data="letter_translations/Drivesafe_genericmailer_EN.pdf"
                 width="800" 
