--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style type="text/css">
       @import url('https://themes.googleusercontent.com/fonts/css?kit=dpiI8CyVsrzWsJLBFKehGpLhv3qFjX7dUn1mYxfCXhI');
 
@@ -85,10 +84,11 @@
       <a href="https://dmv.dc.gov/" target="_blank"> <p align="center"><img alt="" src="images/logos.png"></p></a>
       <br>
       <p align="center" style="font-size:12pt"> <a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Mandarin.html" target="_blank">中文<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Vietnamese.html" target="_blank">Tiếng Việt<a></p>  
-          <i align="center" class="fa fa-file-o"></i>
 
     
-    <p align="center"><iframe src="https://docs.google.com/viewer?url=https://drivesafedc.github.io/letter_translations/Drivesafe_genericmailer_EN.pdf&embedded=true" style="width:800px; height:600px;" frameborder="0"></iframe></p>
+    <p align="center"><iframe id="iframePdf"
+              type="application/pdf"
+              scrolling="auto" src="https://docs.google.com/viewer?url=https://drivesafedc.github.io/letter_translations/Drivesafe_genericmailer_EN.pdf&embedded=true" style="width:800px; height:600px;" frameborder="0"></iframe></p>
 
 <!--      <p align="center"><object data="letter_translations/Drivesafe_genericmailer_EN.pdf"
                 width="800" 
