content security policy third try

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <meta http-equiv="Content-Security-Policy" 
      content="frame-src https://drivesafedc.github.io;">
+          <meta http-equiv="Content-Security-Policy" 
+     content="frame-src https://docs.google.com;">
     <style type="text/css">
       @import url('https://themes.googleusercontent.com/fonts/css?kit=dpiI8CyVsrzWsJLBFKehGpLhv3qFjX7dUn1mYxfCXhI');
 
