--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
       <br>
       <p align="center" style="font-size:12pt"> <a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Mandarin.html" target="_blank">中文<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Vietnamese.html" target="_blank">Tiếng Việt<a></p>  
 
-    
-  ![Mailer Image]("faq_translations/Screen Shot 2023-05-18 at 3.47.59 PM.png")
-                
+      <img src="faq_translations/Screen Shot 2023-05-18 at 3.47.59 PM.png" alt="hi" class="inline"/>
+
       <h2>Frequently Asked Questions</h2></center> </p>
 
         <br>
