--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
       <br>
       <p align="center" style="font-size:12pt"> <a href="https://drivesafe.dc.gov/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-Mandarin.html" target="_blank">中文<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-Vietnamese.html" target="_blank">Tiếng Việt<a></p>  
 
-      <div class = "center">
-      <img src="faq_translations/Screen Shot 2023-05-18 at 3.47.59 PM.png" alt="hi" class="center" 
+      <img src="faq_translations/Screen Shot 2023-05-18 at 3.47.59 PM.png" alt="hi" 
            width = "700"
-           height = "905"/>
-      <div>
+           height = "905"
+           class="center" />
         
       <h2>Frequently Asked Questions</h2></center> </p>
 
