use version with border

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
       <p align="center">
-      <img src="faq_translations/Screen Shot 2023-05-18 at 3.47.59 PM.png" alt="hi" 
+      <img src="faq_translations/mailer_english.png" alt="hi" 
           width = "700"
           height = "905" />
         </p>
