--- a/FAQ-Vietnamese.html
+++ b/FAQ-Vietnamese.html
@@ -82,12 +82,12 @@
     <h1>Drive Safe DC</h1>
     <a href="https://dmv.dc.gov/" target="_blank"> <p align="center"><img alt="" src="images/logos.png"></p></a>
     <br>
-    <p align="center" style="font-size:12pt"> <a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Mandarin.html" target="_blank">中文<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/index.html" target="_blank">English<a></p>
-             
-     <p align="center"><object data=
-"letter_translations/Drivesafe_genericmailer_VI.pdf"
-                width="800" 
-                height="500"></object></p> 
+    <p align="center">
+    <img src="faq_translations/mailer_vietnamese.png" alt="hi" 
+        width = "700"
+        height = "905" />
+      </p>
+        
 
     <h2>Các Câu Hỏi Thường Gặp</h2></center> </p>
 
