--- a/FAQ-Amharic.html
+++ b/FAQ-Amharic.html
@@ -84,10 +84,11 @@
       <br>
       <p align="center" style="font-size:12pt"> <a href="https://drivesafefaqs.github.io/drivesafe/index.html" target="_blank">English<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Mandarin.html" target="_blank">中文<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafefaqs.github.io/drivesafe/FAQ-Vietnamese.html" target="_blank">Tiếng Việt<a></p>
       
-      <p align="center"><object data=
-"letter_translations/Drivesafe_genericmailer_AM.pdf"
-                width="800" 
-                height="500"></object></p> 
+           <p align="center">
+      <img src="letter_translations/mailer_amharic.png" alt="hi" 
+          width = "700"
+          height = "905" />
+        </p>
       
       <h2>በተደጋጋሚ የሚጠየቁ ጥያቄዎች </h2></center> </p>
 
