--- a/FAQ-Vietnamese.html
+++ b/FAQ-Vietnamese.html
@@ -79,9 +79,11 @@
   </head>
 <body>
     
-    <h1>Drive Safe DC</h1>
-    <a href="https://dmv.dc.gov/" target="_blank"> <p align="center"><img alt="" src="images/logos.png"></p></a>
-    <br>
+       <h1>Drive Safe DC</h1>
+      <a href="https://dmv.dc.gov/" target="_blank"> <p align="center"><img alt="" src="images/logos.png"></p></a>
+      <br>
+      <p align="center" style="font-size:12pt"> <a href="https://drivesafe.dc.gov/FAQ-Amharic.html" target="_blank">አማርኛ<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-Mandarin.html" target="_blank">中文<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-Spanish.html" target="_blank">Español<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-French.html" target="_blank">Français<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-Korean.html" target="_blank">한국어<a>&nbsp;&nbsp;&nbsp;<a href="https://drivesafe.dc.gov/FAQ-Vietnamese.html" target="_blank">Tiếng Việt<a></p>  
+         <br>
     <p align="center">
     <img src="letter_translations/mailer_vietnamese.png" alt="hi" 
         width = "700"
