--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
           width = "700"
           height = "905" />
         </p>
+
+       <p align="center">
+      <img src="images/sms.png" alt="hi" 
+          width = "700"
+          height = "905" />
+        </p>     
         
       <h2>Frequently Asked Questions</h2></center> </p>
 
