--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </p>
 
        <p align="center">
-      <img src="images/sms.png" alt="hi" 
+      <img src="images/sms.jpg" alt="hi" 
           width = "700"
           height = "905" />
         </p>     
